--- a/index.html
+++ b/index.html
@@ -1,21 +1,139 @@
 
 <!DOCTYPE html>
-<html lang="ms">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ZASSS - Mesej Anonymous</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>ZASSS – Guilt Bomb Therapy</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Roboto', sans-serif;
+      background: linear-gradient(-45deg, #0f0f0f, #1a1a1a, #111111, #151515);
+      background-size: 400% 400%;
+      animation: gradient 12s ease infinite;
+      color: #f1f1f1;
+    }
+
+    @keyframes gradient {
+      0% {background-position: 0% 50%;}
+      50% {background-position: 100% 50%;}
+      100% {background-position: 0% 50%;}
+    }
+
+    @keyframes glitch {
+      0% {text-shadow: 2px 2px #14b8a6;}
+      20% {text-shadow: -2px -2px #14b8a6;}
+      40% {text-shadow: 2px -2px #14b8a6;}
+      60% {text-shadow: -2px 2px #14b8a6;}
+      80% {text-shadow: 0px 0px #14b8a6;}
+      100% {text-shadow: 2px 2px #14b8a6;}
+    }
+
+    .container {
+      max-width: 600px;
+      margin: 80px auto;
+      padding: 40px;
+      background-color: rgba(17, 17, 17, 0.88);
+      border: 1px solid #14b8a6;
+      border-radius: 12px;
+      box-shadow: 0 0 40px rgba(20, 184, 166, 0.3);
+      animation: fadeIn 1s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    h1 {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 28px;
+      text-align: center;
+      color: #14b8a6;
+      animation: glitch 2.5s infinite;
+    }
+
+    p.description {
+      text-align: center;
+      color: #aaa;
+      margin-bottom: 30px;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 8px;
+      font-weight: bold;
+      color: #ccc;
+    }
+
+    input[type="text"], textarea {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 20px;
+      background-color: #2b2b2b;
+      border: 1px solid #444;
+      border-radius: 6px;
+      color: #eee;
+      font-size: 14px;
+    }
+
+    input[type="submit"] {
+      width: 100%;
+      padding: 14px;
+      font-size: 16px;
+      background-color: #14b8a6;
+      color: #000;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    input[type="submit"]:hover {
+      background-color: #0aa69e;
+      box-shadow: 0 0 10px #14b8a6, 0 0 20px #14b8a6;
+    }
+
+    .footer {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 13px;
+      color: #777;
+    }
+  </style>
 </head>
 <body>
+  <!-- Ambient sound -->
+  <audio autoplay loop>
+    <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_f62a4bbd63.mp3" type="audio/mpeg">
+  </audio>
+
   <div class="container">
-    <h1>ZASSS</h1>
-    <p class="subtitle">Mesej Anonymous Secara Rahsia</p>
-    <form action="https://buy.stripe.com/test_aEU5oVdSDe4h3iAeUU" method="GET">
-      <textarea name="mesej" placeholder="Tulis mesej anda..." required></textarea>
-      <input type="text" name="whatsapp" placeholder="Nombor WhatsApp penerima" required/>
-      <button type="submit">Submit & Bayar</button>
+    <h1>ZASSS - Guilt Bomb</h1>
+    <p class="description">Luahkan perasaan anda secara rahsia. Tiada siapa akan tahu siapa pengirimnya.</p>
+    <form onsubmit="handleSend(); return false;">
+      <label for="message">Mesej anda</label>
+      <textarea id="message" name="message" rows="6" placeholder="Contoh: Saya minta maaf atas semua yang berlaku..." required></textarea>
+
+      <label for="whatsapp">Nombor WhatsApp penerima</label>
+      <input type="text" id="whatsapp" name="whatsapp" placeholder="Contoh: 0123456789" required>
+
+      <input type="submit" value="Submit & Bayar RM2">
     </form>
+    <div class="footer">ZASSS © 2025 – Anonymous Guilt Delivery System</div>
   </div>
+
+  <script>
+    function handleSend() {
+      alert("Menghantar mesej ke penerima secara anonymous...");
+      setTimeout(() => {
+        window.location.href = "https://your-stripe-checkout-link.com";
+      }, 1800);
+    }
+  </script>
 </body>
 </html>
