--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
 
   <div class="container">
     <h1>ZASSS - Guilt Bomb</h1>
-    <p class="description">Luahkan perasaan anda secara rahsia. Tiada siapa akan tahu siapa pengirimnya.</p>
+    <p class="description">Luahkan perasaan anda pada seseorang secara rahsia. Tiada siapa akan tahu siapa anda pengirimnya.</p>
+    <p class="description">Hantar ke WhatsApp penerima secara anonymous</p>
     <form onsubmit="handleSend(); return false;">
       <label for="message">Mesej anda</label>
       <textarea id="message" name="message" rows="6" placeholder="Contoh: Saya minta maaf atas semua yang berlaku..." required></textarea>
