--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
     <form onsubmit="handleSend(); return false;">
       <label for="message">Mesej anda</label>
       <textarea id="message" name="message" rows="6" placeholder="Contoh: Saya minta maaf atas semua yang berlaku..." required></textarea>
+      <textarea id="message" name="message" rows="6" placeholder="Contoh: Saya dah lama suka awak..." required></textarea>
+      <textarea id="message" name="message" rows="6" placeholder="Contoh: Happy birthday crush..." required></textarea>
 
       <label for="whatsapp">Nombor WhatsApp penerima</label>
       <input type="text" id="whatsapp" name="whatsapp" placeholder="Contoh: 0123456789" required>
