--- a/index.html
+++ b/index.html
@@ -118,16 +118,14 @@
     <p class="description">Hantar ke WhatsApp penerima secara anonymous</p>
     <form onsubmit="handleSend(); return false;">
       <label for="message">Mesej anda</label>
-      <textarea id="message" name="message" rows="6" placeholder="Contoh: Saya minta maaf atas semua yang berlaku..." required></textarea>
-      <textarea id="message" name="message" rows="6" placeholder="Contoh: Saya dah lama suka awak..." required></textarea>
-      <textarea id="message" name="message" rows="6" placeholder="Contoh: Happy birthday crush..." required></textarea>
+      <textarea id="message" name="message" placeholder="Contoh: Saya minta maaf atas semua yang berlaku…&#10;Contoh: Saya dah lama suka awak…&#10;Contoh: Happy birthday crush…" required></textarea>
 
       <label for="whatsapp">Nombor WhatsApp penerima</label>
       <input type="text" id="whatsapp" name="whatsapp" placeholder="Contoh: 0123456789" required>
 
-      <input type="submit" value="Submit & Bayar RM2">
+      <input type="submit" value="Send">
     </form>
-    <div class="footer">ZASSS © 2025 – Anonymous Guilt Delivery System</div>
+    <div class="footer">ZASSS © 2025 – Anonymous Guilt Delivery System - By Amanz</div>
   </div>
 
   <script>
