--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
   <div class="container">
     <h1>ZASSS - Guilt Bomb</h1>
-    <p class="description">Luahkan perasaan anda pada seseorang secara rahsia. Tiada siapa akan tahu siapa anda pengirimnya.</p>
+    <p class="description">Luahkan perasaan anda pada seseorang secara rahsia. Tiada siapa akan tahu anda pengirimnya.</p>
     <p class="description">Hantar ke WhatsApp penerima secara anonymous</p>
     <form onsubmit="handleSend(); return false;">
       <label for="message">Mesej anda</label>
