--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     function handleSend() {
       alert("Menghantar mesej ke penerima secara anonymous...");
       setTimeout(() => {
-        window.location.href = "https://your-stripe-checkout-link.com";
+        window.location.href = "https://buy.stripe.com/eVa3dh6rH8Vx41ybII";
       }, 1800);
     }
   </script>
