--- a/index.html
+++ b/index.html
@@ -120,6 +120,15 @@
       <label for="message">Mesej anda</label>
       <textarea id="message" name="message" placeholder="Contoh: Saya minta maaf atas semua yang berlaku…&#10;Contoh: Saya dah lama suka awak…&#10;Contoh: Happy birthday crush…" rows="7" style="font-size: 16px;" required></textarea>
 
+      <label for="recipientName">Nama Penerima</label>
+<input type="text" id="recipientName" name="recipientName" placeholder="Contoh: Aina" required>
+
+<label for="message">Mesej anda</label>
+<textarea id="message" name="message" placeholder="Contoh: Saya minta maaf..." required></textarea>
+
+<label for="phone">Nombor WhatsApp penerima</label>
+<input type="text" id="phone" name="phone" placeholder="Contoh: 0123456789" required>
+
       <label for="whatsapp">Nombor WhatsApp penerima</label>
       <input type="text" id="whatsapp" name="whatsapp" placeholder="Contoh: 0123456789" required>
 
