--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,13 +15,11 @@
       animation: gradient 12s ease infinite;
       color: #f1f1f1;
     }
-
     @keyframes gradient {
       0% {background-position: 0% 50%;}
       50% {background-position: 100% 50%;}
       100% {background-position: 0% 50%;}
     }
-
     @keyframes glitch {
       0% {text-shadow: 2px 2px #14b8a6;}
       20% {text-shadow: -2px -2px #14b8a6;}
@@ -31,7 +28,6 @@
       80% {text-shadow: 0px 0px #14b8a6;}
       100% {text-shadow: 2px 2px #14b8a6;}
     }
-
     .container {
       max-width: 600px;
       margin: 80px auto;
@@ -42,12 +38,10 @@
       box-shadow: 0 0 40px rgba(20, 184, 166, 0.3);
       animation: fadeIn 1s ease-in-out;
     }
-
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
-
     h1 {
       font-family: 'Orbitron', sans-serif;
       font-size: 28px;
@@ -55,20 +49,17 @@
       color: #14b8a6;
       animation: glitch 2.5s infinite;
     }
-
     p.description {
       text-align: center;
       color: #aaa;
       margin-bottom: 30px;
     }
-
     label {
       display: block;
       margin-bottom: 8px;
       font-weight: bold;
       color: #ccc;
     }
-
     input[type="text"], textarea {
       width: 100%;
       padding: 12px;
@@ -79,7 +70,6 @@
       color: #eee;
       font-size: 14px;
     }
-
     input[type="submit"] {
       width: 100%;
       padding: 14px;
@@ -92,12 +82,10 @@
       font-weight: bold;
       transition: background-color 0.3s ease, box-shadow 0.3s ease;
     }
-
     input[type="submit"]:hover {
       background-color: #0aa69e;
       box-shadow: 0 0 10px #14b8a6, 0 0 20px #14b8a6;
     }
-
     .footer {
       text-align: center;
       margin-top: 20px;
@@ -116,28 +104,22 @@
     <h1>ZASSS - Guilt Bomb</h1>
     <p class="description">Luahkan perasaan anda pada seseorang secara rahsia. Tiada siapa akan tahu anda pengirimnya.</p>
     <p class="description">Hantar ke WhatsApp penerima secara anonymous</p>
-    <form onsubmit="handleSend(); return false;">
+
+    <!-- Hantar POST ke create_bill.php -->
+    <form method="POST" action="https://zasss.000webhostapp.com/zasss-test/create_bill.php">
       <label for="message">Mesej anda</label>
       <textarea id="message" name="message" placeholder="Contoh: Saya minta maaf atas semua yang berlaku…&#10;Contoh: Saya dah lama suka awak…&#10;Contoh: Happy birthday crush…" rows="7" style="font-size: 16px;" required></textarea>
 
       <label for="recipientName">Nama Penerima</label>
-<input type="text" id="recipientName" name="recipientName" placeholder="Contoh: Aina" required>
+      <input type="text" id="recipientName" name="recipientName" placeholder="Contoh: Aina" required>
 
-      <label for="whatsapp">Nombor WhatsApp penerima</label>
-      <input type="text" id="whatsapp" name="whatsapp" placeholder="Contoh: 0123456789" required>
+      <label for="phone">Nombor WhatsApp penerima</label>
+      <input type="text" id="phone" name="phone" placeholder="Contoh: 0123456789" required>
 
-      <input type="submit" value="Send">
+      <input type="submit" value="Hantar Mesej Anonim">
     </form>
-    <div class="footer">ZASSS © 2025 – Anonymous Guilt Delivery System - By Amanz</div>
-  </div>
 
-  <script>
-    function handleSend() {
-      alert("Menghantar mesej ke penerima secara anonymous...");
-      setTimeout(() => {
-        window.location.href = "https://buy.stripe.com/eVa3dh6rH8Vx41ybII";
-      }, 1800);
-    }
-  </script>
+    <div class="footer">ZASSS ©️ 2025 – Anonymous Guilt Delivery System - By Amanz</div>
+  </div>
 </body>
 </html>
