--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <label for="phone">Nombor WhatsApp penerima</label>
       <input type="text" id="phone" name="phone" placeholder="Contoh: 0123456789" required>
 
-      <input type="submit" value="Hantar Mesej Anonim">
+      <input type="submit" value="Hantar Mesej Anonymous">
     </form>
 
     <div class="footer">ZASSS ©️ 2025 – Anonymous Guilt Delivery System - By Amanz</div>
