--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <p class="description">Hantar ke WhatsApp penerima secara anonymous</p>
 
     <!-- Hantar POST ke create_bill.php -->
-    <form method="POST" action="https://zasss.realbeautyarby.com.my">
+    <form method="POST" action="https://zasss.realbeautyarby.com.my/create_bill.php">
       <label for="message">Mesej anda</label>
       <textarea id="message" name="message" placeholder="Contoh: Saya minta maaf atas semua yang berlaku…&#10;Contoh: Saya dah lama suka awak…&#10;Contoh: Happy birthday crush…" rows="7" style="font-size: 16px;" required></textarea>
 
