--- a/index.html
+++ b/index.html
@@ -45,6 +45,23 @@
   animation: glitchSubtitle 1s infinite;
   margin-bottom: 30px;
 }
+.glitch-subtitle {
+  font-family: 'Orbitron', sans-serif;
+  font-size: 18px;
+  color: #14b8a6;
+  text-align: center;
+  animation: glitchSubtitle 1s infinite;
+  margin-bottom: 30px;
+}
+
+/* Tambahan untuk baris 187–188 */
+.description {
+  text-align: center;
+  font-size: 15px;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  line-height: 1.6;
+}
 
 @keyframes glitchTitle {
   0%, 100% {text-shadow: 3px 2px #14b8a6;}
