--- a/thankyou.html
+++ b/thankyou.html
@@ -65,7 +65,7 @@
     timerElement.textContent = timeLeft;
     if (timeLeft <= 0) {
       clearInterval(countdown);
-      window.location.href = "https://zasss.realbeautyarby.com.my";
+      window.location.href = "https://zasssguiltbomb.netlify.app/";
     }
   }, 1000);
 </script>
